--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 		<div class="col-md-4">
 
-			<a href="www.tahbristol.com/DCTaiChi/Site1.html"><img src="https://dl.dropboxusercontent.com/u/11413212/DCtaiChinew.png" class="img-responsive" alt="Responsive image"/></a>
+			<a href="http://tahbristol.com/DCTaiChi/Site1.html"><img src="https://dl.dropboxusercontent.com/u/11413212/DCtaiChinew.png" class="img-responsive" alt="Responsive image"/></a>
 		</div>
 
         <div class="col-md-4">
