finshed info display on hover

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<div class="container sites">
 
 		      <div class="col-md-4">
-           <div class="detail_text">
+           <div class="detailText">
 						 <p class='details'>An example site for a small business</p>
 					<img id="sistersSite" src="https://www.dropbox.com/s/zt1u6kftj1e6tm3/SistersScreen1%20copy.png?dl=1" class="img-responsive" alt="Responsive image"/>
 				</div>
@@ -76,25 +76,30 @@
 				</div>
 			</div>
 				<div class="col-md-4">
-
+					<div class="detail_text">
+						<p class='details'>An example site for a small business</p>
 					<img src="https://www.dropbox.com/s/mkf713vcv6fycai/CafeScreen.png?dl=1" class="img-responsive" alt="Responsive image"/>
 
-
+</div>
 				</div>
 
 				<div class="col-md-4">
-
+					<div class="detail_text">
+						<p class='details'>An example site for a small business</p>
 					<img src="https://www.dropbox.com/s/j4lsknhv85hyfsi/CalcScreen.PNG?dl=1" class="img-responsive" alt="Responsive image"/>
 				</div>
-
+</div>
 				<div class="col-md-4">
-
+					<div class="detail_text">
+						<p class='details'>An example site for a small business</p>
 					<img src="https://www.dropbox.com/s/x36zdzrdsihuyjj/DCtaiChinew.png?dl=1" class="img-responsive" alt="Responsive image"/>
 				</div>
-
+</div>
 		        <div class="col-md-4">
-
+							<div class="detail_text">
+								<p class='details'>An example site for a small business</p>
 					<img src="https://www.dropbox.com/s/rbb3bpmoo1mn3yp/WeatherApp.png?dl=1" class="img-responsive" alt="Responsive image"/>
+				</div>
 				</div>
 		    </div>
 
